Fix banner text alignment
Unlike the rest of the page, it had no left margin nor padding
whatsoever.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2289,6 +2289,11 @@ table {
 
 .banner {
 
+  a > * {
+    @include grid-row;
+    padding: 0 rem-calc(16);
+  }
+
   + .budget.expanded,
   + .jumbo {
     margin-top: 0;
